--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <h1>
             <div style="border: 3px solid; background-color: #ffff00;">
                 <h3 style="text-align:center">ホームページ（一気に全て見れます）</h3>
-                <p>※現在目次のシステムが完成していませんので機能しません。</p>
                 </div>
         </h1>
     </header>
@@ -95,9 +94,9 @@
                         (8)その他当社が不適切と判断する行為</P></font>
                 </div>
                 <hr color="beigh" size="5">
-                <h1>
-                    現在コメント欄を作成中です。今コメント打っても、まだシステムが完成していないので何も変わりません。ご注意ください。
-                </h1>
+                <h2>
+                    ※現在コメント欄を作成中です。今コメント打っても、まだシステムが完成していないので何も変わりません。ご注意ください。
+                </h2>
                 <form action="質問.html" method="" name="contact"></form>
                     お名前：<input type="text" placeholder="名前を入力">
                     <div>
