--- a/トップページ.html
+++ b/トップページ.html
@@ -42,7 +42,10 @@
         </span></a>
         </h2>
         </div>
+            <div><script async src="https://cse.google.com/cse.js?cx=e35d05b63f45b1934"></script>
+<div class="gcse-searchbox-only"></div></div>
     </hotter>
+            
         
 </body>
 </html>
