--- a/トップページ.html
+++ b/トップページ.html
@@ -43,7 +43,7 @@
         </h2>
         </div>
             <div><script async src="https://cse.google.com/cse.js?cx=e35d05b63f45b1934"></script>
-<div class="gcse-searchbox-only"></div></div>
+<div class="gcse-searchresults-only"></div></div>
     </hotter>
             
         
