--- a/トップページ.html
+++ b/トップページ.html
@@ -44,6 +44,9 @@
        
             
     </hotter>
+            <div>
+            <script async src="https://cse.google.com/cse.js?cx=e35d05b63f45b1934"></script>
+<div class="gcse-searchresults-only"></div></div>
              </div>
             <div><script async src="https://cse.google.com/cse.js?cx=e35d05b63f45b1934"></script>
 <div class="gcse-searchresults-only"></div></div>
