--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jn">
 <head>
         <link rel="favicon.icon" href="favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
